# MOSS_DESAI

./: .gitignore  README.md  environment.yml  genindex.html  index.html  input.txt  jekyll-gh-pages.yml  makefile  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg
.github/workflows/: deploy_gh_pages.yml
MOSS/: GetCMFGENflux.py  GetColumnMESAhist.py  GetCorners.py  GetQs_CMFGEN.py  GetSpectra.py  IBF.py  IMF.py  MOSS.py  MOSS2.py  MOSS_binary_fbin.py  MOSS_binary_period.py  MOSS_binary_qchoice.py  Tutorial-Single_Star_population.ipynb  constants.py  data1_run4_1000000.0yrs.txt  data1_run4_10000000.0yrs.txt  data1_run4_100000000.0yrs.txt  data1_run4_20000000.0yrs.txt  data1_run4_3000000.0yrs.txt  data1_run4_30000000.0yrs.txt  data1_run4_5000000.0yrs.txt  data1_run4_50000000.0yrs.txt  data1_run4_7000000.0yrs.txt  data1_run4_70000000.0yrs.txt  extrapolate.py  input.txt  integrate_BB_star.py  locate_ZAMS.py  utils.py
MOSS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
_modules/: index.html
_modules/MOSS/: locate_ZAMS.html
_sources/: index.rst.txt
_sources/chapters/: Theory.rst.txt
chapters/: Installation.html  Introduction.html  MOSS.html  Theory.html
docs/: Makefile
docs/source/: conf.py
