[metadata]
# replace with your username:
name = MOSS
version = 0.0.1
author = Ylva Gotberg
author_email = ylva@ist.ac.at
description = Setup configuration of MOSS.
long_description = file: README.md
long_description_content_type = text/markdown
url = 
11project_urls =
    Documentation = 
    TravisCI = 
14classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
keywords = Asteroseismology, Peakbagging, Power Spectra

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires = numpy
tests_require = pytest
zip_safe = False

[options.extras_require]
docs = 
    sphinx 
    sphinx-rtd-theme
tests = pytest; py

# [options.entry_points]
# console_scripts =
#     sample-bin = matpy.bins.sample_bin:main

[options.packages.find]
where = .